--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node agent.js"
   },
   "dependencies": {
-    "fauxmojs": "^0.2.3"
+    "chalk": "^2.1.0",
+    "fauxmojs": "^0.2.3",
+    "ip": "^1.1.5"
   }
 }
