--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chalk": "^2.1.0",
     "express": "^4.16.3",
     "fauxmojs": "^1.0.1",
+    "fs-extra": "^6.0.1",
     "ip": "^1.1.5"
   }
 }
