--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "fauxmojs": "^1.0.1",
     "fs-extra": "^6.0.1",
-    "ip": "^1.1.5"
+    "ip": "^1.1.5",
+    "request": "^2.87.0"
   }
 }
